--- a/angular20/src/app/pages/login/login.page.html
+++ b/angular20/src/app/pages/login/login.page.html
@@ -38,10 +38,10 @@
         </infraon-button>
       </form>
 
-      <p class="login-footer">
+      <!-- <p class="login-footer">
         Don't have an account? 
         <a routerLink="/signup" class="login-link">Sign up</a>
-      </p>
+      </p> -->
     </div>
   </div>
 </div>
