module path update

--- a/angular14/src/app/components/login/login.component.html
+++ b/angular14/src/app/components/login/login.component.html
@@ -7,13 +7,9 @@
       [attr.login-endpoint]="loginEndpoint"
       style="display: block;">
     </login-web-component>
-<!-- 
-    <div *ngIf="errorMessage" class="error-message" style="margin-top: 20px; padding: 10px; background-color: #f8d7da; color: #721c24; border-radius: 4px;">
-      {{ errorMessage }}
-    </div> -->
 
     <p style="text-align: center; margin-top: 20px;">
-      Don't have an account? <a routerLink="/signup" style="color: #007bff; text-decoration: none;">Sign up</a>
+      Don't have an account? <a routerLink="/auth/signup" style="color: #007bff; text-decoration: none;">Sign up</a>
     </p>
   </div>
 </div>
