--- a/angular14/src/app/components/signup/signup.component.html
+++ b/angular14/src/app/components/signup/signup.component.html
@@ -73,7 +73,7 @@
     </form>
 
     <p style="text-align: center; margin-top: 20px;">
-      Already have an account? <a routerLink="/login" style="color: #007bff; text-decoration: none;">Login</a>
+      Already have an account? <a routerLink="/auth/login" style="color: #007bff; text-decoration: none;">Login</a>
     </p>
   </div>
 </div>
