path structure fixes

--- a/angular14/src/app/components/login/login.component.html
+++ b/angular14/src/app/components/login/login.component.html
@@ -48,6 +48,10 @@
         Don't have an account?
         <a routerLink="/auth/signup" class="login-link">Sign up</a>
       </p>
+      <p class="login-footer">
+        Login with Angular 20? 
+        <a href="/v2/auth/login" class="login-link">Login</a>
+      </p>
     </div>
   </div>
 </div>
