--- a/angular20/src/app/pages/signup/signup.page.html
+++ b/angular20/src/app/pages/signup/signup.page.html
@@ -67,7 +67,7 @@
 
       <p class="signup-footer">
         Already have an account? 
-        <a routerLink="/login" class="signup-link">Login</a>
+        <a routerLink="/auth/login" class="signup-link">Login</a>
       </p>
     </div>
   </div>
