--- a/angular20/src/app/pages/login/login.page.html
+++ b/angular20/src/app/pages/login/login.page.html
@@ -38,10 +38,14 @@
         </infraon-button>
       </form>
 
-      <!-- <p class="login-footer">
+      <p class="login-footer">
         Don't have an account? 
-        <a routerLink="/signup" class="login-link">Sign up</a>
-      </p> -->
+        <a routerLink="/auth/signup" class="login-link">Sign up</a>
+      </p>
+      <p class="login-footer">
+        Don't have an account at angaulr 14? 
+        <a href="/auth/signup" class="login-link">Sign up</a>
+      </p>
     </div>
   </div>
 </div>
